--- a/index.html
+++ b/index.html
@@ -250,15 +250,15 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	  <li class="search">Search the corpus in <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=c2FoaWRpY2EuMWNvcmludGhpYW5z&" target="_blank">ANNIS</a></li>
 			</li>
 <li><input class="folder" type="checkbox" id="1cor-top" />
-<label class="folder" for="1cor-top">Individual documents in TEI XML as well as  normalized version in HTML (analytic works in Chrome or Safari only):</label>
+<label class="folder" for="1cor-top">Individual documents in TEI XML; Chapter views of normalized text and analytic versions in HTML (analytic works in Chrome or Safari only):</label>
 		<ul>
-        <li>Coming soon!</li>
-		 <!-- <li><input type="button" class="doc" id="1cor-1"/><label class="doc" for="1cor-1">Chapter 1:</label> <a href="download/corpora/1Cor/1Cor1_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor1_chapter.html" target="_blank">HTML</a></li>
-          <li><input type="button" class="doc" id="1cor-2"/><label class="doc" for="1cor2">Chapter 2:</label> <a href="download/corpora/1Cor/1Cor2_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor2_chapter.html" target="_blank">HTML</a></li>
-          <li><input type="button" class="doc" id="1cor-3"/><label class="doc" for="1cor3">Chapter 3:</label> <a href="download/corpora/1Cor/1Cor3_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor3_chapter.html" target="_blank">HTML</a></li>
-		  <li><input type="button" class="doc" id="1cor-4"/><label class="doc" for="1cor4">Chapter 4:</label> <a href="download/corpora/1Cor/1Cor4_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor4_chapter.html" target="_blank">HTML</a></li>
-          <li><input type="button" class="doc" id="1cor-5"/><label class="doc" for="1cor5">Chapter 5:</label> <a href="download/corpora/1Cor/1Cor5_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor5_chapter.html" target="_blank">HTML</a></li><-->
-</ul>
+		  <li><input type="button" class="doc" id="1cor-1"/><label class="doc" for="1cor-1">Chapter 1:</label> download TEI XML, <a href="download/corpora/1Cor/Sahidica.1Cor1_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/1Cor/Sahidica.1Cor1_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
+      <li><input type="button" class="doc" id="1cor-2"/><label class="doc" for="1cor-2">Chapter 2:</label> download TEI XML, <a href="download/corpora/1Cor/Sahidica.1Cor2_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/1Cor/Sahidica.1Cor2_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
+      <li><input type="button" class="doc" id="1cor-3"/><label class="doc" for="1cor-3">Chapter 3:</label> download TEI XML, <a href="download/corpora/1Cor/Sahidica.1Cor3_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/1Cor/Sahidica.1Cor3_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
+      <li><input type="button" class="doc" id="1cor-4"/><label class="doc" for="1cor-4">Chapter 4:</label> download TEI XML, <a href="download/corpora/1Cor/Sahidica.1Cor4_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/1Cor/Sahidica.1Cor4_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
+      <li><input type="button" class="doc" id="1cor-5"/><label class="doc" for="1cor-5">Chapter 5:</label> download TEI XML, <a href="download/corpora/1Cor/Sahidica.1Cor5_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/1Cor/Sahidica.1Cor5_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
+          
+    </ul>
 
 </div>
 <h2>Tools</h2>
