--- a/acknowledgments.html
+++ b/acknowledgments.html
@@ -45,15 +45,15 @@
 </ul>
 		<p><a name="team" id="team"></a>The Coptic SCRIPTORIUM research team includes:</p>
 <ul>
-          <li>Rebecca S. Krawiec,  Canisius College, <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=dG9rCiYgbWV0YTo6YW5ub3RhdGlvbiA9IC8uKktyYXdpZWMuKi8&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxTYWhpZGljYS5NYXJrLjEtNixCZXNhLmxldHRlcnM&amp;cl=5&amp;" target="new">editor and encoder/annotator</a>, <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=dG9rCiYgbWV0YTo6dHJhbnNsYXRpb24gPSAvLipLcmF3aWVjLiov&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxTYWhpZGljYS5NYXJrLjEtNixCZXNhLmxldHRlcnM&amp;cl=5&amp;" target="new">translator</a> (2013-)</li>
-          <li>Christine Luckritz Marquis,  editor and encoder/annotator (2014-)</li>
-          <li>Elizabeth Platte, Kalamazoo College, <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbiA9IC8uKlBsYXR0ZS4qLw&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxTYWhpZGljYS5NYXJrLjEtNixCZXNhLmxldHRlcnM&amp;" target="new">editor and encoder/annotator</a> (2013-)</li>
+          <li>Rebecca S. Krawiec, Canisius College, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbj0vLipLcmF3aWVjLiov&amp;_c=YXBvcGh0aGVnbWF0YS5wYXRydW0sYmVzYS5sZXR0ZXJzLHNhaGlkaWNhLjFjb3JpbnRoaWFucyxzYWhpZGljYS5tYXJrLHNoZW5vdXRlLmEyMixzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXI&amp;cl=5&amp;cr=5&amp;s=0&amp;l=10&amp;_seg=bm9ybV9ncm91cA" target="new">editor and encoder/annotator</a>, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6dHJhbnNsYXRpb249Ly4qS3Jhd2llYy4qLw&amp;_c=YXBvcGh0aGVnbWF0YS5wYXRydW0sYmVzYS5sZXR0ZXJzLHNhaGlkaWNhLjFjb3JpbnRoaWFucyxzYWhpZGljYS5tYXJrLHNoZW5vdXRlLmEyMixzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXI&amp;cl=5&amp;cr=5&amp;s=0&amp;l=10&amp;_seg=bm9ybV9ncm91cA" target="new">translator</a> (2013-)</li>
+          <li>Christine Luckritz Marquis, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbj0vLipMdWNrcml0ei4qLw&amp;_c=YXBvcGh0aGVnbWF0YS5wYXRydW0sYmVzYS5sZXR0ZXJzLHNhaGlkaWNhLjFjb3JpbnRoaWFucyxzYWhpZGljYS5tYXJrLHNoZW5vdXRlLmEyMixzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXI&amp;cl=5&amp;cr=5&amp;s=0&amp;l=10&amp;_seg=bm9ybV9ncm91cA" target="new">editor and encoder/annotator</a>, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6dHJhbnNsYXRpb249Ly4qTHVja3JpdHouKi8&_c=c2FoaWRpY2EubWFyayxzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXIsYXBvcGh0aGVnbWF0YS5wYXRydW0sc2FoaWRpY2EuMWNvcmludGhpYW5zLGJlc2EubGV0dGVycyxzaGVub3V0ZS5hMjI&cl=5&cr=5&s=140&l=10&_seg=bm9ybV9ncm91cA" target="new">translator</a> (2014-)</li>
+          <li>Elizabeth Platte, Kalamazoo College, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbj0vLipQbGF0dGUuKi8&_c=c2FoaWRpY2EubWFyayxhcG9waHRoZWdtYXRhLnBhdHJ1bSxzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXIsc2FoaWRpY2EuMWNvcmludGhpYW5zLGJlc2EubGV0dGVycyxzaGVub3V0ZS5hMjI&cl=5&cr=5&s=0&l=10&_seg=bm9ybQ" target="new">editor and encoder/annotator</a> (2013-)</li>
+          <li>Janet Timbie, the Catholic University of America,  <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbj0vLipUaW1iaWUuKi8&amp;_c=c2FoaWRpY2EubWFyayxhcG9waHRoZWdtYXRhLnBhdHJ1bSxzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXIsc2FoaWRpY2EuMWNvcmludGhpYW5zLGJlc2EubGV0dGVycyxzaGVub3V0ZS5hMjI&amp;cl=5&amp;cr=5&amp;s=0&amp;l=10&amp;_seg=bm9ybV9ncm91cA" target="new">editor and annotator</a> (2013)</li>
           <li>Eliese-Sophia Lincke, Humboldt University (2014-)</li>
           <li>So Miyagawa, Kyoto University (2014-)</li>
           <li>Bridget Almas, Perseus Digital Library (consultant for SCRIPTORIUM) (2014-)</li>
           <li>Edwin Ko, Georgetown University, annotation interface development (2014-)</li>		  
           <li>Yanrui Liu,  M.A., University of the Pacific, repository and website managment (2014-)</li>
-          <li>Janet Timbie, the Catholic University of America (2013); <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbiA9IC8uKlRpbWJpZS4qLw&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxTYWhpZGljYS5NYXJrLjEtNixCZXNhLmxldHRlcnM&amp;" target="new">editor and annotator</a></li>
         </ul>
         <p> Advisory Board:</p>
 		<ul>
@@ -82,7 +82,6 @@
   </ul>
 <p>Former members of our  team:</p>
 <ul>
-  <li></li>
   <li>Lauren McDermott, the University of the Pacific student; TEI encoder and HTML programmer (2013-14)</li>
   <li>Alex Dickerson, the University of the Pacific, student; TEI encoder and programmer (2013)</li>
 </ul>
@@ -90,7 +89,7 @@
 <p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/><a href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>.<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><br />
   Text on this page licensed under the Creative Commons Attribution 3.0 Unported License.  <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
   <p><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</p>
-  <p>Page last updated 30 October 2014.</p>
+  <p>Page last updated 3 November 2014.</p>
 </div>
 </body>
 </html>		
