--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 		<p>We hope SCRIPTORIUM will serve as a model for future digital humanities projects
 			utilizing historical corpora or corpora in languages outside of the Indo-European and
 			Semitic language families.</p>
-		<p>The latest <a href="http://earlymonasticism.org/category/scriptorium/" target="_blank">release notes and news about the project</a> are on <a href="http://www.earlymonasticism.org" target="_blank">C. Schroeder's blog</a>. <a href="http://youtu.be/rt_Wr5CvHFU" target="new">A video introduction to the project</a>, including how to use ANNIS, is also available.</p>
-		<p>Please read our <a href="FAQ.html" target="new">Frequently Asked Questions</a> for more information on the project, methodologies, and terminology.</p>
+		<p>The latest <a href="http://earlymonasticism.org/category/scriptorium/" target="_blank">release notes and news about the project</a> are on <a href="http://www.earlymonasticism.org" target="_blank">C. Schroeder's blog</a>. </p>
+		<p>NEW: November 2014: <a href="https://www.youtube.com/watch?v=JZW6oWHbwQU" target="new">We created a new video</a> introducing the projec texts and data model, and how to use ANNIS.		</p>
 		<p>We hosted a workshop on digital research and scholarship in Coptic at Humboldt University on May 14, 2013.  <a href="workshop2013/workshop2013.html">The program and presentations are available.</a></p>
+		<p>Please read our <a href="FAQ.html" target="new">Frequently Asked Questions</a> for more information on the project, methodologies, and terminology.</p>
 		<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/> You can also <a href="https://github.com/CopticScriptorium" target="new">fork us on GitHub</a>.</p>
 <h2>Corpora</h2>
 <p>
@@ -308,6 +309,6 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		<li><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</li>
 	</ul>
 	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
-	<p>Page last updated 3 November 2014</p>
+	<p>Page last updated 19 November 2014</p>
 </body>
     </html>   
