Fix links of Mark 13 & 15, add links of besa, remove TEI coming soon text, and update the date at the bottom

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 project is licensed under the <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a> unless otherwise indicated.<br/>
   <br/>
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="img/88x31.png" /></a></p>
-<p><a href="http://github.com/copticscriptorium/corpora/releases/latest" target="new">Download</a> the latest version of the entire set of corpora in PAULA XML, relANNIS. (New TEI XML coming soon!) </p>
+<p><a href="http://github.com/copticscriptorium/corpora/releases/latest" target="new">Download</a> the latest version of the entire set of corpora in PAULA XML, relANNIS.</p>
 <p>Versions of our <a href="http://github.com/CopticScriptorium/corpora-legacy-releases" target="new">corpora released before July 2014 are archived here</a>.</p>
 <div class="shadow">
   <h4>Searching the Corpora: Example Queries</h4>
@@ -124,7 +124,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	<ul>
 		<li class="info"><a href="FAQ.html#A22" target="_blank">About the corpus</a></li>
 		<li class="search"><a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=c2hlbm91dGUuYTIy" target="new">Search the corpus in ANNIS</a> (click <a href="FAQ.html#font" target="new">here</a> if the Coptic characters do not appear properly)</li>
-		<li><input class="dl" type="button" id="a22-dl1"/><label class="dl" for="a22-dl1"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file.</a></label> (New TEI coming soon!)
+		<li><input class="dl" type="button" id="a22-dl1"/><label class="dl" for="a22-dl1"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file.</a></label>
 		</li>
 			</ul>
 		</li>
@@ -143,7 +143,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	<ul>
 		<li class="info"><a href="FAQ.html#aof" target="new">About the corpus</a></li>
 		<li class="search"><a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=c2hlbm91dGUuYWJyYWhhbS5vdXIuZmF0aGVy" target="new">Search the corpus in ANNIS</a> (click <a href="FAQ.html#font" target="new">here</a> if the Coptic characters do not appear properly)</li>
-		<li><input class="dl" type="button"  id="aof-dl"/><label class="dl" for="aof-dl"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file.</a></label></label> (New TEI coming soon!)</li>
+		<li><input class="dl" type="button"  id="aof-dl"/><label class="dl" for="aof-dl"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file.</a></label></label> </li>
 		</li>
         <br/>
 		<!--<li>Metadata record (<a href="">LAUDATIO</a>)</li>-->
@@ -171,7 +171,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	  <li class="info"><a href="FAQ.html#Besa" target="_blank">About the corpus</a></li>
 	  <li class="search"><a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=YmVzYS5sZXR0ZXJz" target="_blank">Search the corpus in ANNIS</a> (click <a href="FAQ.html#font" target="new">here</a> if the Coptic characters do not appear properly)</li>
 		  <ul>
-          <li><input class="dl" type="button" id="besa-dl1"/><label class="dl" for="besa-dl1"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file.</a>  (New TEI coming soon!)</label></li>
+          <li><input class="dl" type="button" id="besa-dl1"/><label class="dl" for="besa-dl1"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file.</a></label></li>
 		  </ul>
                   <br/>
 
@@ -179,8 +179,8 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	  <li><input class="folder" type="checkbox" id="besa-top" /><label class="folder" for="besa-top">Individual documents in TEI XML as well as diplomatic, normalized, and analytic versions in HTML (analytic works in Chrome or Safari only):</label><br /><br />
       
 		<ul>
-		  <li><input type="button" class="doc" id="besa-1"/><label class="doc" for="besa-1">Letter to Aphthonia:</label> download TEI XML, HTML: <a href="download/corpora/BL/Besa.letters.to_Aphthonia_dipl.html" target="_blank">diplomatic</a>, <a href="download/corpora/BL/Besa.letters.to_Aphthonia_norm.html" target="_blank">normalized</a>, <a href="download/corpora/BL/Besa.letters.to_Aphthonia_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>) </li>
-		  <li><input type="button" class="doc" id="besa-2"/><label class="doc" for="besa-2">Letter to Thieving Nuns:</label> download TEI XML, HTML: <a href="download/corpora/BL/Besa.letters.to_thieving_nuns_dipl.html" target="_blank">diplomatic</a>, <a href="download/corpora/BL/Besa.letters.to_thieving_nuns_norm.html" target="_blank">normalized</a>, <a href="download/corpora/BL/Besa.letters.to_thieving_nuns_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>) </li>
+		  <li><input type="button" class="doc" id="besa-1"/><label class="doc" for="besa-1">Letter to Aphthonia:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/besa-letters/besa.letters_TEI/Besa.letters.to_Aphthonia_TEI.xml" target="_blank">download TEI XML</a>, HTML: <a href="download/corpora/BL/Besa.letters.to_Aphthonia_dipl.html" target="_blank">diplomatic</a>, <a href="download/corpora/BL/Besa.letters.to_Aphthonia_norm.html" target="_blank">normalized</a>, <a href="download/corpora/BL/Besa.letters.to_Aphthonia_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>) </li>
+		  <li><input type="button" class="doc" id="besa-2"/><label class="doc" for="besa-2">Letter to Thieving Nuns:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/besa-letters/besa.letters_TEI/Besa.letters.to_Thieving_Nuns_TEI.xml" target="_blank">download TEI XML</a>, HTML: <a href="download/corpora/BL/Besa.letters.to_thieving_nuns_dipl.html" target="_blank">diplomatic</a>, <a href="download/corpora/BL/Besa.letters.to_thieving_nuns_norm.html" target="_blank">normalized</a>, <a href="download/corpora/BL/Besa.letters.to_thieving_nuns_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>) </li>
 		</ul>
 	</li>
 	</ul>
@@ -191,7 +191,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	<ul>
 	  <li class="search">Search the corpus in <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=YXBvcGh0aGVnbWF0YS5wYXRydW0" target="_blank">ANNIS</a></li>
 		<ul>
-          <li><input class="dl" type="button" id="ap-dl"/><label class="dl" for="ap-dl"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file.</a>  (New TEI coming soon!)</label> 
+          <li><input class="dl" type="button" id="ap-dl"/><label class="dl" for="ap-dl"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file.</a></label> 
           </li>
 		</ul>
         <br/>
@@ -238,9 +238,9 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		  <li><input type="button" class="doc" id="mrk-5"/><label class="doc" for="mrk-5">Chapter 5:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/bible/sahidica.mark_TEI/Mark_5_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark5_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/Mark/Sahidica.Mark5_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
 		  <li><input type="button" class="doc" id="mrk-6"/><label class="doc" for="mrk-6">Chapter 6:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/bible/sahidica.mark_TEI/Mark_6_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark6_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/Mark/Sahidica.Mark6_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
       <li><input type="button" class="doc" id="mrk-12"/><label class="doc" for="mrk-12">Chapter 12:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/bible/sahidica.mark_TEI/Mark_12_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark12_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/Mark/Sahidica.Mark12_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
-      <li><input type="button" class="doc" id="mrk-13"/><label class="doc" for="mrk-13">Chapter 13:</label> <a href="https://github.com/CopticScriptorium/corpora/blob/master/bible/sahidica.mark_TEI/Mark_13_TEI.xml">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark13_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/Mark/Sahidica.Mark13_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
+      <li><input type="button" class="doc" id="mrk-13"/><label class="doc" for="mrk-13">Chapter 13:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/bible/sahidica.mark_TEI/Mark_13_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark13_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/Mark/Sahidica.Mark13_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
       <li><input type="button" class="doc" id="mrk-14"/><label class="doc" for="mrk-14">Chapter 14:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/bible/sahidica.mark_TEI/Mark_14_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark14_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/Mark/Sahidica.Mark14_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
-      <li><input type="button" class="doc" id="mrk-15"/><label class="doc" for="mrk-15">Chapter 15:</label> <a href="https://github.com/CopticScriptorium/corpora/blob/master/bible/sahidica.mark_TEI/Mark_15_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark15_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/Mark/Sahidica.Mark15_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
+      <li><input type="button" class="doc" id="mrk-15"/><label class="doc" for="mrk-15">Chapter 15:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/bible/sahidica.mark_TEI/Mark_15_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark15_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/Mark/Sahidica.Mark15_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
       <li><input type="button" class="doc" id="mrk-16"/><label class="doc" for="mrk-16">Chapter 16:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/bible/sahidica.mark_TEI/Mark_16_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark16_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/Mark/Sahidica.Mark16_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
         </ul>
 	</li>
@@ -309,6 +309,6 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		<li><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</li>
 	</ul>
 	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
-	<p>Page last updated 19 November 2014</p>
+	<p>Page last updated 08 December 2014</p>
 </body>
     </html>   
