--- a/basicpageformat.html
+++ b/basicpageformat.html
@@ -38,10 +38,11 @@
 		</table>
 
 	<p></p>
-		<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/><a href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>.<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><br />
+		<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/><a href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>.</p>
+		<p><a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><br />
 		  Text on this page licensed under the Creative Commons Attribution 3.0 Unported License.  <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
 		<p><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</p>
-		<p>Page last updated 5 September 2014.</p>
+		<p>Page last updated 11 December 2014.</p>
     </div>
     </div>
     </body>
