--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
 		<p>We hope SCRIPTORIUM will serve as a model for future digital humanities projects
 			utilizing historical corpora or corpora in languages outside of the Indo-European and
 			Semitic language families.</p>
+		<h2>News</h2>
 		<p>The latest <a href="http://earlymonasticism.org/category/scriptorium/" target="_blank">release notes and news about the project</a> are on <a href="http://www.earlymonasticism.org" target="_blank">C. Schroeder's blog</a>. </p>
-		<p>NEW: November 2014: <a href="https://www.youtube.com/watch?v=JZW6oWHbwQU" target="new">We created a new video</a> introducing the projec texts and data model, and how to use ANNIS.		</p>
+		<p>NEW: Announcing a Digital Coptic workshop and symposium at  Georgetown University, March 12-13, 2015. <a href="workshop2015/index.html" target="new">Details and CFP here</a>.</p>
+		<p>November 2014: <a href="https://www.youtube.com/watch?v=JZW6oWHbwQU" target="new">We created a new video</a> introducing the projec texts and data model, and how to use ANNIS.		</p>
 		<p>We hosted a workshop on digital research and scholarship in Coptic at Humboldt University on May 14, 2013.  <a href="workshop2013/workshop2013.html">The program and presentations are available.</a></p>
 		<p>Please read our <a href="FAQ.html" target="new">Frequently Asked Questions</a> for more information on the project, methodologies, and terminology.</p>
 		<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/> You can also <a href="https://github.com/CopticScriptorium" target="new">fork us on GitHub</a>.</p>
