Update on Dec 18th

--- a/FAQ.html
+++ b/FAQ.html
@@ -19,6 +19,21 @@
 </head>
 
 <body>
+  <ul id="nav">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="tools.html">Tools</a></li>
+  <li><a href="corpora.html">Corpora</a></li>
+  <li><a href="FAQ.html">Documentation</a></li>
+  <li><a href="news.html">
+    News
+    <ul>
+      <li><a href="http://www.copticscriptorium.org/workshop2015/index.html">Workshop 2015</a></li>
+      <li><a href="workshop2013/workshop2013.html">Workshop 2013</a></li>
+    </ul>
+    </a>
+  </li>
+  <li><a href="about.html">About</a></li>
+</ul>
 <div id="wrapper">
      <table width=100%><tr height="160">
 	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="256" height="180" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
@@ -83,10 +98,13 @@
 <p><strong><a name="board" id="board"></a>Do you have an Advisory Board?</strong><br />
   Yes. The current Advisory Board members are listed on our <a href="acknowledgments.html">acknowledgments page</a>.</p>
 	<p></p>
-		<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/><a href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>.<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><br />
-		  Text on this page licensed under the Creative Commons Attribution 3.0 Unported License.  <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
-		<p><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</p>
-		<p>Page last updated 5 September 2014.</p>
+		<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/> You can also <a href="https://github.com/CopticScriptorium" target="new">fork us on GitHub</a>.</p>
+  <hr/>
+  <p>
+    <a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.
+  </p>
+  <p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
+  <p>Page last updated 08 December 2014</p>
 </div>
 </body>
 </html>
