--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>Coptic Scriptorium</title>
+	<title>SCRIPTORIUM</title>
 	<link rel="stylesheet" href="scriptorium.css" type="text/css" charset="utf-8"/>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -17,44 +17,98 @@
 
 </script>
 
-
 </head>
 
 <body>
-
-
-<ul id="nav">
+  <ul id="nav">
   <li><a href="index.html">Home</a></li>
   <li><a href="tools.html">Tools</a></li>
   <li><a href="corpora.html">Corpora</a></li>
-  <li><a>
+  <li><a href="FAQ.html">Documentation</a></li>
+  <li><a href="news.html">
     News
     <ul>
-      <li><a href="#">Updates</a></li>
-      <li><a href="#">Workshop 2015</a></li>
-      <li><a href="http://www.copticscriptorium.org/workshop2013/workshop2013.html">Workshop 2013</a></li>
+      <li><a href="http://www.copticscriptorium.org/workshop2015/index.html">Workshop 2015</a></li>
+      <li><a href="workshop2013/workshop2013.html">Workshop 2013</a></li>
     </ul>
     </a>
   </li>
-  <li><a href="#">Documentation</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
-
 <div id="wrapper">
-  <table width=100%><tr>
-    <td width="210" rowspan="3" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="211" height="150" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
-      <td width="15"> </td>
-    <td width="77%" valign="bottom"><h1>Coptic Scriptorium</h1>
-      <img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px" longdesc="http://www.pacific.edu"/>                 <img src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/>       <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62px" alt="neh logo" longdesc="http://www.neh.gov"/></td>
+     <table width=100%><tr height="160">
+	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="256" height="180" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
+	  <td width="77%" valign="bottom">
+		 <h1>Coptic Scriptorium</h1></td>
+         <td width="1%" rowspan="2"></td>
+	</tr>
+    <tr>
+      <td><img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px"/>  <img src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/> <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62" alt="neh logo" longdesc="http://www.neh.gov"/></td>
     </tr>
-    </table>
-	<h3>Acknowledgments</h3>
-	<ul>
-		<li><a href="acknowledgments.html">Thank you</a></li>
-		<li><a href="https://www.zotero.org/groups/coptic_scriptorium/items/collectionKey/8IHTW3NZ" target="new">Bibliography</a></li>
-		<li><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</li>
-	</ul>
-	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
-	<p>Page last updated 08 December 2014</p>
+		</table>
+
+	<p></p>
+
+  <p>Support for  <a href="index.html">Coptic SCRIPTORIUM</a> has been provided by:</p>
+		<ul>
+		  <li>The <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>,</li>
+		  <li>The Department of Linguistics, Georgetown University</li>
+		  <li>The Institute for German Language and Linguistics, Humboldt University</li>
+		  <li>Grants from the Pacific Fund, Faculty Research Committee,  College Research Fund, and Department of Religious and Classical Studies at the University of the Pacific
+		    </p>
+	      </li>
+</ul>
+		<p><a name="team" id="team"></a>The Coptic SCRIPTORIUM research team includes:</p>
+<ul>
+          <li><a href="http://www.carrieschroeder.com/" target="_blank">Caroline T. Schroeder</a>, the University of the Pacific</li>
+          <li><a href="http://corpling.uis.georgetown.edu/amir/" target="_blank">Amir Zeldes</a>, Georgetown University</li>
+          <li>Rebecca S. Krawiec, Canisius College, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbj0vLipLcmF3aWVjLiov&amp;_c=YXBvcGh0aGVnbWF0YS5wYXRydW0sYmVzYS5sZXR0ZXJzLHNhaGlkaWNhLjFjb3JpbnRoaWFucyxzYWhpZGljYS5tYXJrLHNoZW5vdXRlLmEyMixzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXI&amp;cl=5&amp;cr=5&amp;s=0&amp;l=10&amp;_seg=bm9ybV9ncm91cA" target="new">editor and encoder/annotator</a>, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6dHJhbnNsYXRpb249Ly4qS3Jhd2llYy4qLw&amp;_c=YXBvcGh0aGVnbWF0YS5wYXRydW0sYmVzYS5sZXR0ZXJzLHNhaGlkaWNhLjFjb3JpbnRoaWFucyxzYWhpZGljYS5tYXJrLHNoZW5vdXRlLmEyMixzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXI&amp;cl=5&amp;cr=5&amp;s=0&amp;l=10&amp;_seg=bm9ybV9ncm91cA" target="new">translator</a> (2013-)</li>
+          <li>Christine Luckritz Marquis, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbj0vLipMdWNrcml0ei4qLw&amp;_c=YXBvcGh0aGVnbWF0YS5wYXRydW0sYmVzYS5sZXR0ZXJzLHNhaGlkaWNhLjFjb3JpbnRoaWFucyxzYWhpZGljYS5tYXJrLHNoZW5vdXRlLmEyMixzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXI&amp;cl=5&amp;cr=5&amp;s=0&amp;l=10&amp;_seg=bm9ybV9ncm91cA" target="new">editor and encoder/annotator</a>, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6dHJhbnNsYXRpb249Ly4qTHVja3JpdHouKi8&_c=c2FoaWRpY2EubWFyayxzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXIsYXBvcGh0aGVnbWF0YS5wYXRydW0sc2FoaWRpY2EuMWNvcmludGhpYW5zLGJlc2EubGV0dGVycyxzaGVub3V0ZS5hMjI&cl=5&cr=5&s=140&l=10&_seg=bm9ybV9ncm91cA" target="new">translator</a> (2014-)</li>
+          <li>Elizabeth Platte, Kalamazoo College, <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbj0vLipQbGF0dGUuKi8&_c=c2FoaWRpY2EubWFyayxhcG9waHRoZWdtYXRhLnBhdHJ1bSxzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXIsc2FoaWRpY2EuMWNvcmludGhpYW5zLGJlc2EubGV0dGVycyxzaGVub3V0ZS5hMjI&cl=5&cr=5&s=0&l=10&_seg=bm9ybQ" target="new">editor and encoder/annotator</a> (2013-)</li>
+          <li>Janet Timbie, the Catholic University of America,  <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbj0vLipUaW1iaWUuKi8&amp;_c=c2FoaWRpY2EubWFyayxhcG9waHRoZWdtYXRhLnBhdHJ1bSxzaGVub3V0ZS5hYnJhaGFtLm91ci5mYXRoZXIsc2FoaWRpY2EuMWNvcmludGhpYW5zLGJlc2EubGV0dGVycyxzaGVub3V0ZS5hMjI&amp;cl=5&amp;cr=5&amp;s=0&amp;l=10&amp;_seg=bm9ybV9ncm91cA" target="new">editor and annotator</a> (2013)</li>
+          <li>Eliese-Sophia Lincke, Humboldt University (2014-)</li>
+          <li>So Miyagawa, Kyoto University (2014-)</li>
+          <li>Bridget Almas, Perseus Digital Library (consultant for SCRIPTORIUM) (2014-)</li>
+          <li>Edwin Ko, Georgetown University, annotation interface development (2014-)</li>		  
+          <li>Yanrui Liu,  M.A., University of the Pacific, repository and website managment (2014-)</li>
+        </ul>
+        <p> Advisory Board:</p>
+		<ul>
+          <li>Alain Delattre, Assistant Professor, Department of Languages and Literatures, Université libre de Bruxelles; Papryi.info.</li>
+          <li>Eitan Grossman,  Assistant Professor, Department of Linguistics and the School of Language Sciences, Hebrew University.</li>
+          <li>Robin Imhof, Humanities Librarian and Associate Professor, University Library, the University of the Pacific.</li>
+		</ul>
+<p>C. Schroeder and A. Zeldes gratefully acknowledge the following individuals and organizations for their contributions to the project:</p>
+<ul>
+  <li>The <a href="http://cmcl.aai.uni-hamburg.de/" target="new">Corpus dei Manoscritti Copti Letterari</a> (Coptic lexicon and other materials)</li>
+  <li>Stephen Emmel, University of Münster</li>
+          <li>Eric E. Johnson</li>
+          <li>Tito Orlandi, Ph.D., Sapienza University, Rome; the University of Hamburg</li>
+          <li><a
+				href="http://www.sfb632.uni-potsdam.de/annis/" target="new"
+				>The ANNIS team at Humboldt University</a> for providing so many customizations</li>
+</ul>
+<p>Partner Projects:</p>
+<ul>
+  <li><a href="http://www.sfb632.uni-potsdam.de/annis/" target="new">ANNIS</a></li>
+  <li><a href="http://korpling.german.hu-berlin.de/komet/" target="new">KOMeT</a></li>
+  <li><a href="http://papyri.info" target="new">Papyri.info</a></li>
+  <li><a href="http://www.perseus.org" target="new">Perseus Digital Library</a></li>
+  <li><a href="http://www.dh.uni-leipzig.de/wo/open-philology-project/" target="new">Open Philology</a></li>
+  <li><a href="https://korpling.german.hu-berlin.de/p/projects/saltnpepper/wiki/" target="new">SaltNPepper</a></li>
+  </ul>
+<p>Former members of our  team:</p>
+<ul>
+  <li>Lauren McDermott, the University of the Pacific student; TEI encoder and HTML programmer (2013-14)</li>
+  <li>Alex Dickerson, the University of the Pacific, student; TEI encoder and programmer (2013)</li>
+</ul>
+<p>A project bibliography is available at <a href="http://cmcl.aai.uni-hamburg.de/" target="_blank">Zotero</a></p>
+<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/> You can also <a href="https://github.com/CopticScriptorium" target="new">fork us on GitHub</a>.</p>
+  <hr/>
+  <p>
+    <a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.
+  </p>
+  <p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
+  <p>Page last updated 08 December 2014</p>
 </body>
-    </html>   
+</html>		
