fix the bib link in the about page

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
   <li>Lauren McDermott, the University of the Pacific student; TEI encoder and HTML programmer (2013-14)</li>
   <li>Alex Dickerson, the University of the Pacific, student; TEI encoder and programmer (2013)</li>
 </ul>
-<p>A project bibliography is available at <a href="http://cmcl.aai.uni-hamburg.de/" target="_blank">Zotero</a></p>
+<p>A project bibliography is available at <a href="https://www.zotero.org/groups/coptic_scriptorium/items/collectionKey/8IHTW3NZ" target="_blank">Zotero</a></p>
 <p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/> You can also <a href="https://github.com/CopticScriptorium" target="new">fork us on GitHub</a>.</p>
   <hr/>
   <p>
