Minor change, fix the icon of in the workshop2015 page

--- a/workshop2015/index.html
+++ b/workshop2015/index.html
@@ -67,7 +67,7 @@
 	    Text on this page licensed under the Creative Commons Attribution 3.0 Unported License.  <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
 		<p><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</p>
 		
-    <p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/> You can also <a href="https://github.com/CopticScriptorium" target="new">fork us on GitHub</a>.</p>
+    <p><img src="../img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/> You can also <a href="https://github.com/CopticScriptorium" target="new">fork us on GitHub</a>.</p>
   <hr/>
   <p>
     <a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.
