add Not Because a Fox Barks
added to corpora, FAQ; updated index and news

--- a/corpora.html
+++ b/corpora.html
@@ -135,6 +135,24 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	</ul>
 	  </div>
 
+	<h3>Not Because A Fox Barks by Shenoute</h3>
+		<div class="css-treeview">
+	<ul>
+		<li class="info"><a href="FAQ.html#fox" target="new">About the corpus</a></li>
+		<li class="search"><a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=c2hlbm91dGUuZm94" target="new">Search the corpus in ANNIS</a> (click <a href="FAQ.html#font" target="new">here</a> if the Coptic characters do not appear properly)</li>
+		<li><input class="dl" type="button"  id="aof-dl"/><label class="dl" for="aof-dl"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file. [Not Because a Fox Barks coming soon.]</a></label></label> </li>
+		</li>
+        <br/>
+		<!--<li>Metadata record (<a href="">LAUDATIO</a>)</li>-->
+		<!-- <li><input class="folder" type="checkbox" id="aof-top" />
+		<label class="folder" for="aof-top">Individual documents in TEI XML as well as diplomatic and normalized versions in HTML:</label><br /><br />
+		<ul>
+			<li><input type="button" class="doc" id="aof-1"/><label class="doc" for="aof-1">Fox.XH204-216</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/abraham/shenoute.fox_TEI/shenoute.fox.XH204-216.xml" target="_blank">download TEI XML</a>, HTML: <a href="download/corpora/fox/shenoute.fox.XH204-216_dipl.html" target="_blank">diplomatic</a>, <a href="download/corpora/fox/shenoute.fox.XH204-216_norm.html" target="_blank">normalized</a>, <a href="download/corpora/fox/shenoute.fox.XH204-216_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
+		</ul>-->
+	</li>
+    <br/>
+	</ul>
+	  </div>
 
 	<h3>Letters of Besa</h3>
 	<div class="css-treeview">
@@ -238,6 +256,6 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
     <a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.
   </p>
   <p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
-  <p>Page last updated 18 December 2014</p>
+  <p>Page last updated 19 December 2014</p>
 </body>
     </html>   
