--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 		</ul>
 		<p>We hope SCRIPTORIUM will serve as a model for future digital humanities projects
 			utilizing historical corpora or corpora in languages outside of the Indo-European and
-			Semitic language families.</p>
-		<p>The latest <a href="http://earlymonasticism.org/category/scriptorium/" target="_blank">release notes and news about the project</a> are on <a href="http://www.earlymonasticism.org" target="_blank">C. Schroeder's blog</a>. </p>
-		<p>NEW: Announcing a Digital Coptic workshop and symposium at  Georgetown University, March 12-13, 2015. <a href="workshop2015/index.html" target="new">Details and CFP here</a>.</p>
+			Semitic language families.		</p>
+		<p><strong>NEW</strong>: Announcing a Digital Coptic workshop and symposium at  Georgetown University, March 12-13, 2015. <a href="workshop2015/index.html" target="new">Details and CFP here</a>.</p>
+		<p><strong>New corpus added December, 2014:</strong> Shenoute's Not Because a Fox Barks (MONB.XH witness)</p>
 		<p>November 2014: <a href="https://www.youtube.com/watch?v=JZW6oWHbwQU" target="new">We created a new video</a> introducing the projec texts and data model, and how to use ANNIS.		</p>
 		<p>We hosted a workshop on digital research and scholarship in Coptic at Humboldt University on May 14, 2013.  <a href="workshop2013/workshop2013.html">The program and presentations are available.</a></p>
 		<p>Please read our <a href="FAQ.html" target="new">Frequently Asked Questions</a> for more information on the project, methodologies, and terminology.</p>
@@ -98,6 +98,6 @@
     <a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.
   </p>
 	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
-	<p>Page last updated 18 December 2014</p>
+	<p>Page last updated 19 December 2014</p>
 </body>
     </html>   
