updated with NBFB

--- a/FAQ.html
+++ b/FAQ.html
@@ -93,11 +93,7 @@
 <p>Besa was leader of the White Monastery in Egypt after <a href="#Shenoute">Shenoute</a> in the late 5th century.  His surviving writings (from White Monastery manuscripts)   were published by K. H. Kuhn in his <em><a href="https://www.zotero.org/groups/coptic_scriptorium/items/collectionKey/8IHTW3NZ/itemKey/77DV477V/q/kuhn" target="new">Letters and Sermons of Besa, </a></em><a href="https://www.zotero.org/groups/coptic_scriptorium/items/collectionKey/8IHTW3NZ/itemKey/77DV477V/q/kuhn">2 vols, Corpus Scriptorum Christianorum Orientalium 157-58, Scriptores Coptici 21-22. Louvain: L. Durbecq, 1956</a>. Coptic SCRIPTORIUM texts in the Besa corpus were created from consulting photographs of the original manuscripts.</p>
 
 <p><a name="Aphthonia" id="Aphthonia"></a><strong>Who is Aphthonia?</strong></p>
-<p>Aphthonia was a nun at the Women's Community in the White Monastery Federation in the 5th century. She was the daughter of a <a href="http://en.wikipedia.org/wiki/Comes">comes</a> (a local official) called Alexandros, but lived in the monastery apart from her natural family. In Besa's letter to her, Aphthonia is admonished for not regarding the monastery's Reverand Mother as her true mother, for secretly receiving a parcel from her parents, for telling her parents that she'd been abused at the monastery and for inspiring sedition in a fellow nun. The letter would have been publicly read to the congregation, which is also addressed to the text.</p>
-<p>To read the letter and it's translation <a href="download/corpora/BL/Besa.letters.to_Aphthonia_norm.html">click here</a> and hover over the text.
-</p>
-
-
+<p>Aphthonia was a nun at the Women's Community in the White Monastery Federation in the 5th century. She was the daughter of a <a href="http://en.wikipedia.org/wiki/Comes">comes</a> (a local official) called Alexandros, but lived in the monastery apart from her natural family. In Besa's letter to her, Aphthonia is admonished for not regarding the monastery's  Mother as her true mother, for secretly receiving a parcel from her parents, for telling her parents that she'd been abused at the monastery, and for inspiring sedition in a fellow nun. The letter would have been publicly read to the congregation, which is also addressed in the text.</p>
 <p><strong><a name="board" id="board"></a>Do you have an Advisory Board?</strong><br />
   Yes. The current Advisory Board members are listed on our <a href="acknowledgments.html">acknowledgments page</a>.</p>
 	<p></p>
@@ -107,7 +103,7 @@
     <a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.
   </p>
   <p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
-  <p>Page last updated 18 December 2014</p>
+  <p>Page last updated 29 December 2014</p>
 </div>
 </body>
 </html>
