--- a/news.html
+++ b/news.html
@@ -6,6 +6,13 @@
 
   <title>Coptic Scriptorium</title>
   <link rel="stylesheet" href="scriptorium.css" type="text/css" charset="utf-8"/>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script> 
+    $(function(){
+      $("#navbar").load("nav.html");
+      $("#bottomcontent").load("bottom.html"); 
+    });
+  </script> 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,23 +28,8 @@
 </head>
 
 <body>
-
-
-<ul id="nav">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="tools.html">Tools</a></li>
-  <li><a href="corpora.html">Corpora</a></li>
-  <li><a href="FAQ.html">Documentation</a></li>
-  <li><a href="news.html">
-    News
-    <ul>
-      <li><a href="workshop2015/index.html">Workshop 2015</a></li>
-      <li><a href="workshop2013/workshop2013.html">Workshop 2013</a></li>
-    </ul>
-    </a>
-  </li>
-  <li><a href="about.html">About</a></li>
-</ul>
+<!-- Navbar  -->
+<div id="navbar"></div>
 
 <div id="wrapper">
      <table width=100%><tr>
@@ -81,12 +73,7 @@
     &nbsp;
     <h4>Older news and events</h4>
     <p>We hosted a workshop on digital research and scholarship in Coptic at Humboldt University on May 14, 2013.  <a href="workshop2013/workshop2013.html">The program and presentations are available.</a></p>
-    <p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/> You can also <a href="https://github.com/CopticScriptorium" target="new">fork us on GitHub</a>.</p>
-  <hr/>
-  <p>
-    <a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.
-  </p>
-  <p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
-  <p>Page last updated 18 December 2014</p>
+    <!-- Bottom Content -->
+  <div id="bottomcontent"></div>
 </body>
     </html>   
