Fix path issues

--- a/workshop2015/workshop2015.html
+++ b/workshop2015/workshop2015.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>Digital Coptic 2: CFP</title>
+	<title>Digital Coptic 2: CFP(Coptic Scriptorium: Workshop 2015)</title>
 	<link rel="stylesheet" href="../scriptorium.css" type="text/css" charset="utf-8"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script> 
