Add banner template as top.html

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
   <script> 
     $(function(){
       $("#navbar").load("nav.html");
+      $("#topbanner").load("top.html");
       $("#bottomcontent").load("bottom.html"); 
     });
   </script> 
@@ -30,16 +31,7 @@
   <!-- Navbar  -->
 <div id="navbar"></div>
 <div id="wrapper">
-     <table width=100%><tr height="160">
-	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="256" height="180" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
-	  <td width="77%" valign="bottom">
-		 <h1>Coptic Scriptorium</h1></td>
-         <td width="1%" rowspan="2"></td>
-	</tr>
-    <tr>
-      <td><img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px"/>  <img src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/> <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62" alt="neh logo" longdesc="http://www.neh.gov"/></td>
-    </tr>
-		</table>
+     <div id="topbanner"></div>
 
 	<p></p>
 
