--- a/workshop2015/workshop2015.html
+++ b/workshop2015/workshop2015.html
@@ -10,6 +10,7 @@
   <script> 
     $(function(){
       $("#navbar").load("../nav.html");
+      $("#topbanner").load("../top.html");
       $("#bottomcontent").load("../bottom.html"); 
     });
   </script> 
@@ -38,13 +39,7 @@
   <!-- Navbar  -->
 <div id="navbar"></div>
 <div id="wrapper">
-     <table width=100%><tr>
-	  <td width="210" rowspan="3" valign="bottom"><a href="#imageCredit"><img src="../img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="211" height="150" alt="PierpontMorgan" longdesc="../img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
-      <td width="15"> </td>
-	  <td width="77%" valign="bottom"><h1>Coptic Scriptorium</h1>
-      <img alt="Seal of the University of the Pacific" align="left" src="../img/Seal_Orange_RGB.png" height="62px" longdesc="http://www.pacific.edu"/>                 <img src="../img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/>       <img src="../img/neh_logo_horizontal_rgb.jpg" width="252" height="62px" alt="neh logo" longdesc="http://www.neh.gov"/></td>
-    </tr>
-		</table>
+     <div id="topbanner"></div>
 
 	<p></p>
 		<h3 dir="ltr">CFP: &nbsp;Digital Coptic 2</h3>
