--- a/AbrahamOurFatherParallels.html
+++ b/AbrahamOurFatherParallels.html
@@ -6,6 +6,12 @@
 
 	<title>Coptic Scriptorium</title>
 	<link rel="stylesheet" href="scriptorium.css" type="text/css" charset="utf-8"/>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script> 
+    $(function(){
+      $("#topbanner").load("top.html");
+    });
+  </script> 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -42,16 +48,7 @@ h3 {
 
 <body>
 <div id="wrapper">
-     <table width=100%><tr height="160">
-	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="256" height="180" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
-	  <td width="77%" valign="top">
-		 <h1>Coptic Scriptorium</h1></td>
-         <td width="1%" rowspan="2"></td>
-	</tr>
-    <tr>
-      <td><img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px"/>  <img src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/> <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62" alt="neh logo" longdesc="http://www.neh.gov"/></td>
-    </tr>
-		</table>
+     <div id="topbanner"></div>
 
 	<p></p>
 <center>
