updated links and deleted unnecessary zip files
Deleted zip files that are tools now in GitHub and linked to via GitHub
on our site

--- a/corpora.html
+++ b/corpora.html
@@ -201,7 +201,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	</div> 
 
 	<h3>Bible</h3>
-	<p>Note: This corpus is derived from the Sahidica New Testament, which was released by Warren Wells and made available for free electronic distributionfor academic use only.  It is not licensed CC-BY; <a href="http://www.copticscriptorium.org/download/corpora/Mark/coptic_nt_sahidic.html" target="_blank">click here for Sahidica licensing information</a>.</p>
+	<p>Note: This corpus is derived from the Sahidica New Testament, which was released by Warren Wells and made available for free electronic distributionfor academic use only.  It is not licensed CC-BY; <a href="download/corpora/Mark/coptic_nt_sahidic.html" target="_blank">click here for Sahidica licensing information</a>.</p>
     <div class="css-treeview">
     <ul>
     <li><input class="dl" type="button" id="mrk-dl"/><label class="dl" for="mrk-dl"><a href="https://github.com/CopticScriptorium/corpora/releases/latest" target="new">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</a></label></li>
@@ -241,6 +241,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
       <li><input type="button" class="doc" id="1cor-5"/><label class="doc" for="1cor-5">Chapter 5:</label> <a href="https://raw.githubusercontent.com/CopticScriptorium/corpora/master/bible/sahidica.1corinthians_TEI/1Cor_05_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor5_chapter.html" target="_blank">chapter view</a>, <a href="download/corpora/1Cor/Sahidica.1Cor5_analytic.html" target="_blank">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
           
     </ul>
+
 
 </div>
 
