Interium step, add FAQ page

--- a/newlogobranding/scriptorium/index.html
+++ b/newlogobranding/scriptorium/index.html
@@ -36,7 +36,9 @@
   <li><a href="news.html">NEWS</a></li>
    <li><a href="workshop2015/index.html">WORKSHOP</a></li>
   <li><a href="about.html">ABOUT</a></li>
-</ul><div id="wrapper">
+</ul>
+
+<div id="wrapper">
 
 <div id="header">
     <div id="copticlogo"><a href="index.html"><img src="img/copticlogo.png" width="210" height="101" alt="Coptic SCRIPTORIUM"/></a></div>
