--- a/corpora.html
+++ b/corpora.html
@@ -247,5 +247,6 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 
 <!-- Bottom Content -->
 <div id="bottomcontent"></div>
+<p>Page last updated 26 January 2015</p>
 </body>
-    </html>   
+</html>   
