Interium step II, build the architecture of the new website, some pages especially corpora needs to be fixed, and also the bottom template and page last update time needs to be fixed

--- a/newlogobranding/scriptorium/news.html
+++ b/newlogobranding/scriptorium/news.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
@@ -34,9 +33,10 @@
 <div id="navbar"></div>
 
 <div id="wrapper">
-     <div id="topbanner"></div>
+<div id="topbanner"></div>
 
   <p></p>
+  <div id="content">
     <p>Coptic SCRIPTORIUM (<span style="text-decoration: underline;">S</span>ahidic<span
         > </span><span style="text-decoration: underline;"
         >C</span>orpus<span > </span><span
@@ -69,6 +69,7 @@
     &nbsp;
     <h4>Older news and events</h4>
     <p>We hosted a workshop on digital research and scholarship in Coptic at Humboldt University on May 14, 2013.  <a href="workshop2013/workshop2013.html">The program and presentations are available.</a></p>
+  </div>
     <!-- Bottom Content -->
   <div id="bottomcontent"></div>
 </body>
