--- a/newlogobranding/scriptorium/FAQ.html
+++ b/newlogobranding/scriptorium/FAQ.html
@@ -28,21 +28,9 @@
 
 <body>
   <!-- Navbar  -->
-<ul id="nav">
-  <li><a href="index.html">HOME</a></li>
-  <li><a href="tools.html">TOOLS</a></li>
-  <li><a href="corpora.html">CORPORA</a></li>
-  <li><a href="FAQ.html">DOCUMENTATION</a></li>
-  <li><a href="news.html">NEWS</a></li>
-   <li><a href="workshop2015/index.html">WORKSHOP</a></li>
-  <li><a href="about.html">ABOUT</a></li>
-</ul>
+<div id="navbar"></div>
 <div id="wrapper">
-     <div id="header">
-    <div id="copticlogo"><a href="index.html"><img src="img/copticlogo.png" width="210" height="101" alt="Coptic SCRIPTORIUM"/></a></div>
-
-    <div id="unicorn"><a href="index.html"><img src="img/unicorn.png" width="80" height="101" alt="Unicorn"/></a></div>
-    <div id="englishlogo"><a href="index.html"><img src="img/englishlogo.png" width="199" height="101" alt="Coptic SCRIPTORIUM"/></a></div><img src="img/ruleline.png" width="800px" height="14" alt=""/></div>
+<div id="topbanner"></div>
 
 
 	<p></p>
@@ -98,19 +86,7 @@
 	<p></p>
 </div>
 		<!-- Bottom Content -->
-<div id="footer"><div id="sponsors">
-      <img alt="Seal of the University of the Pacific"  src="img/Seal_Orange_RGB.png" height="62px" longdesc="http://www.pacific.edu"/>&nbsp;&nbsp;&nbsp;<img src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/>&nbsp;&nbsp;&nbsp;       <img src="img/nehlogo.png" width="252" height="62" alt="neh logo" longdesc="http://www.neh.gov"/></div>
-  
-  <br />
-  Coptic Scriptorium is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>.<br /><br />
-    <a href="https://github.com/CopticScriptorium"><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/></a><a href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>!<br />
-      <br />
-        <a href="https://www.facebook.com/carrieschroeder1" target="_blank"><img src="img/socialicon32.png" width="32" height="32" alt=""/></a> Follow Carolyn on <a href="https://www.facebook.com/carrieschroeder1" target="_blank">Facebook</a> and <a href="https://twitter.com/ctschroeder" target="_blank">Twitter</a><br />
-      <br />
-  Page last updated 19 December 2014
-    
-  </div>
-    
+<div id="bottomcontent"></div>
 </div>
 </body>
 </html>
